Added in memory catalog service

--- a/api/catalogapi/CatalogApi/CatalogApi.csproj
+++ b/api/catalogapi/CatalogApi/CatalogApi.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="nginx\" />
     <Folder Include="Repositories\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
