--- a/api/catalogapi/docker-compose.yml
+++ b/api/catalogapi/docker-compose.yml
@@ -6,3 +6,24 @@ services:
     build:
       context: ./CatalogApi
       dockerfile: Dockerfile
+    networks:
+      - catalogapi_network
+
+#  mongodb:
+#    image: mongo
+#    ports:
+#      - "27017:27017"
+#    environment:
+#      - MONGODB_ROOT_USERNAME=dbadmin
+#      - MONGODB_ROOT_PASSWORD=password
+#      - MONGODB_ROOT_ROLE=root
+#      - MONGODB_USERNAME=webrole
+#      - MONGODB_PASSWORD=password
+#      - MONGODB_DBNAME=catalog
+#      - MONGODB_ROLE=readwrite
+#    networks:
+#      - catalogapi_network
+
+networks:
+  catalogapi_network:
+    driver: bridge
