--- a/api/catalogapi/docker-compose.yml
+++ b/api/catalogapi/docker-compose.yml
@@ -1,7 +1,17 @@
 version: '3'
 
 services:
-  catalogapi:
+  loadbalancer:
+    image: dockercloud/haproxy:1.2.1
+    ports:
+      - "80:80"
+    links:
+      - api
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - catalogapi_network
+  api:
     image: catalogapi
     build:
       context: ./CatalogApi
