Update docker compose file to fix service name issues

--- a/api/catalogapi/docker-compose.yml
+++ b/api/catalogapi/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     ports:
       - "80:80"
     links:
-      - api
+      - catalogapi
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - catalogapi_network
-  api:
+  catalogapi:
     image: catalogapi
     build:
       context: ./CatalogApi
